fixed height of icons on contact page to not warp on smaller devices

--- a/philip-morgan-foundation/src/PageComponents/Contact/_Contact.scss
+++ b/philip-morgan-foundation/src/PageComponents/Contact/_Contact.scss
@@ -76,9 +76,8 @@ section#contact-page {
         margin: 5px 0;
 
         svg {
-          font-size: 1.5em;
+          font-size: 2em;
           padding: 5px;
-          height: 40px;
           width: auto;
           border-radius: 50%;
           border: 1px solid white;
